internal/webserver/static/styles.css
/* ... */
.htmx-spinner-container .htmx-spinner {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);

    /* https://codepen.io/sosuke/pen/Pjoqqp */
    filter: invert(54%) sepia(17%) saturate(4210%) hue-rotate(176deg) brightness(89%) contrast(98%);
}

dialog#image_carousel {
    border-radius: 2em;
    border: 0.3em solid var(--color-twitter-blue);
    box-shadow: 0 0 1em var(--color-twitter-blue);
    outline: none;
    overflow: visible;
    padding: 1.4em;
}
dialog#image_carousel a.close-button {
    position: absolute;
    right: -1.3em;
    top: -1.5em;

    width: 1em;
    line-height: 1em;
    font-size: 2em;
    justify-content: center;
    border: 0.1em solid black;
}
dialog#image_carousel a.close-button:not(:hover):not(:active) {
    background-color: var(--color-twitter-blue-extra-light);
}
dialog::backdrop {
    background: hsla(204, 87%, 73%, 0.3); /* based on --color-twitter-blue-light */
}

.quoted-tweet {
    margin: 1em 0;
}

.rounded-gray-outline {
    outline-color: lightgray;
    outline-style: solid;
    outline-width: 1px;
}
.rounded-gray-outline, .rounded-gray-outline > .tweet {
    border-radius: 20px;
}

.profile-banner-image {
    width: 100%;
}

.unstyled-link {
    text-decoration: none;
    color: inherit;
}

.author-info {
    display: flex;
    align-items: center;
}
.author-info a {
    line-height: 0;
}

.author-info, .tweet .text {
    cursor: default;
}

.circle-outline {
    display: flex;
    border-radius: 50%;
    outline: 1px solid #777;
    margin: 0 0.4em;
    font-size: 0.8em;
    padding: 0.2em;
    box-sizing: border-box;
}

.name-and-handle {
    padding: 0 0.6em !important; /* !important to make the ".quick-link .span" rule in the login button not overrule it */
}

.display-name {
    font-weight: bold;
    white-space: nowrap;
}
.handle {
    color: var(--color-twitter-text-gray);
}

.tweet-header-container {
    display: flex;
    align-items: center;
}
.reply-mentions-container {
    display: flex;
    align-items: center;
    cursor: default;
    flex-grow: 1;
    justify-content: center;
    flex-wrap: wrap;
}
.reply-mentions {
    padding: 0 0.5em;
}

.replying-to-label {
    color: var(--color-twitter-text-gray);
}
a.entity {
    text-decoration: none;
    color: var(--color-twitter-blue);
}

.tweet .text, .dm-message-text-container .text {
    display: block;
    margin-bottom: 0.4em;
    margin-top: 0;
    overflow-wrap: anywhere;
}
.dm-message-text-container .text:last-child {
    margin-bottom: 0;
}
#focused-tweet .text {
    font-size: 1.4em;
}
#focused-tweet .quoted-tweet .text {
    font-size: unset;
}
.tweet-content video {
    max-width: 100%;
    max-height: 40em;
}
.embedded-link {
    padding: 1.3em;
    margin-top: 1em;
    display: flex;
    flex-direction: column;
    background-color: var(--color-twitter-off-white);
}
img.embedded-link-preview {
    border-radius: 1em;
    max-width: 100%;
    height: auto; /* preserve aspect ratio */
}
.embedded-link-description {
    color: var(--color-twitter-text-gray);
    font-size: 0.8em;
    margin: 0;
}
h3 {
    margin: 0.5em 0;
}
.embedded-link-domain-container {
    margin-top: 0.2em
}
.embedded-link-domain {
    margin-left: 0.3em;
}
.thread-parent-tweet:first-child, #focused-tweet:first-child {
    padding-top: 1em;
}
.thread-parent-tweet .vertical-reply-line-container,
.reply-chain .vertical-reply-line-container {
    width: 3em;
    margin-right: 0.5em;
}
.thread-parent-tweet .vertical-reply-line:not(.quoted-tweet .vertical-reply-line),
.reply-chain > :not(:last-child) .vertical-reply-line:not(.quoted-tweet .vertical-reply-line) {
    width: 2px;
    background-color: var(--color-twitter-off-white-dark);
    flex-grow: 1;
    margin: auto;
}

.profile-image {
    border-radius: 50%;
    width: 3em;
    height: 3em;
    display: inline;
    border: 0.1em solid var(--color-outline-gray);
}

.user-header {
    border-bottom: 1px solid var(--color-outline-gray);
}
.user-header .author-info {
    font-size: 1.3em;
    padding: 1em;
}
.user-header .profile-image {
    width: 8em;
    height: 8em;
}
.tabs-container {
    outline: 1px solid var(--color-outline-gray);
}
.tabs-container a.tab {
    flex-grow: 1;
    text-align: center;
    font-size: 1.1em;
    font-weight: bold;
    color: var(--color-twitter-text-gray);
    padding: 0.8em;
}
.tabs-container a.tab.active-tab {
    color: var(--color-twitter-blue);
    border-bottom: 0.2em solid var(--color-twitter-blue);
}
.tabs-container a.tab:hover {
    color: var(--color-twitter-blue);
}

.pinned-tweet__pin-container {
    margin: 0.5em 0em -1em 3em;
    z-index: 1;
    position: relative; /* z-index is ignored if `position` is "static" */
    gap: 0.2em;
}
img.svg-icon.pinned-tweet__pin-icon {
    filter: invert(43%) saturate(30%);
    width: 1em;
    height: auto;
}

.row {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.row.spread {
    justify-content: space-between;
}

.vertical-reply-line-container {
    flex-grow: 0;
    flex-shrink: 0;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-self: stretch;
    width: 1em; /* will be overridden by, e.g., parent-thread properties */
}
.vertical-container-1 {
    flex-grow: 1;
    flex-shrink: 1;
}

.posted-at-container {
    flex-grow: 1;
    min-width: 5em;
}
p.posted-at {
    float: right;
    color: var(--color-twitter-text-gray);
    font-size: 0.875em;
    white-space: nowrap;
}

.interactions-bar {
    display: flex;
    flex-direction: row;
    margin: 0.5em 0;
}
.interaction-stat {
    flex-grow: 1;
    display: flex;
}
.interaction-stat span {
    line-height: 1.5em;
    padding: 0 0.5em;
}
.interactions-bar .dummy {
    flex-grow: 5;
}

#focused-tweet {
    border-bottom: 1px solid var(--color-twitter-off-white-dark);
    padding-bottom: 0.5em;
}


.reply-chain {
    margin-top: 1em;
}
/* ... */

